# MeshSimplifier

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
backend/native/: CMakeLists.txt  MeshSimplifierCli.cpp  MeshSimplifierServer.cpp
backend/server/: package.json
backend/server/src/: server-config.js  server.js
backend/server/test/: server-config.test.mjs
cmake/: FindOpenCASCADE.cmake
docs/: DEBUG.md
scripts/: bootstrap-vcpkg.ps1  build-windows.ps1  clean.sh  dev-windows.ps1  package-windows.ps1
src/: main.cpp
src/App/: Application.cpp  Application.h  CMakeLists.txt
src/Core/: Allocator.cpp  Allocator.h  CMakeLists.txt  Logger.cpp  Logger.h  TaskSystem.cpp  TaskSystem.h  Types.cpp  Types.h
src/Geometry/: AdaptiveTessellator.cpp  AdaptiveTessellator.h  BRepAnalyzer.cpp  BRepAnalyzer.h  BRepEngine.cpp  BRepEngine.h  CMakeLists.txt  DefeatureProcessor.cpp  DefeatureProcessor.h  PrimitiveRecognizer.cpp  PrimitiveRecognizer.h  STEPReader.cpp  STEPReader.h  ShellExtractor.cpp  ShellExtractor.h  SurfaceClassifier.cpp  SurfaceClassifier.h
src/IO/: CMakeLists.txt  STLExporter.cpp  STLExporter.h  glTFExporter.cpp  glTFExporter.h
src/Math/: CMakeLists.txt  MathUtils.cpp  MathUtils.h
src/Mesh/: CMakeLists.txt  FeatureSimplifier.cpp  FeatureSimplifier.h  MeshCache.cpp  MeshData.cpp  MeshData.h  Simplifier.cpp  Simplifier.h
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Scene/: CMakeLists.txt  SceneGraph.cpp  SceneGraph.h
src/UI/: CMakeLists.txt  UIManager.h  UIManager.mm
tests/: CMakeLists.txt
tools/: StepProbe.cpp
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx
web/src/styles/: app.css
