file(GLOB_RECURSE SOURCES *.cpp *.h)
add_library(MeshForgeGeometry STATIC ${SOURCES})
target_include_directories(MeshForgeGeometry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
if(OpenCASCADE_FOUND OR TARGET OpenCASCADE::OpenCASCADE)
    target_link_libraries(MeshForgeGeometry PUBLIC MeshForgeCore MeshForgeMath OpenCASCADE::OpenCASCADE)
    target_compile_definitions(MeshForgeGeometry PUBLIC MF_HAS_OPENCASCADE=1)
else()
    target_link_libraries(MeshForgeGeometry PUBLIC MeshForgeCore MeshForgeMath)
    message(STATUS "OpenCASCADE not found, Geometry module will be stubbed")
endif()
